--- a/frontend/src/components/ImageModal.css
+++ b/frontend/src/components/ImageModal.css
@@ -56,12 +56,37 @@
 }
 .b-35 {
   margin-top: 10px;
-  padding: 0px;
+  padding: 0; /* Remove default padding */
+  list-style-type: none; /* Remove bullet markers */
   display: flex;
   width: 93%;
   justify-content: space-between;
-  align-items: center;     /* Center vertically */
-  flex-wrap: wrap;         /* Allow wrapping for smaller screen sizes */
+  align-items: center; /* Center items vertically */
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  gap: 10px; /* Optional spacing between buttons */
+}
+
+.b-35l{
+  margin-top: 10px;
+  padding: 0; /* Remove default padding */
+  list-style-type: none; /* Remove bullet markers */
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.b-352{
+  margin-top: 10px;
+  padding: 0; /* Remove default padding */
+  list-style-type: none; /* Remove bullet markers */
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.b-352 li{
+  padding-bottom: 5%;
 }
 
 .res-sec .b-35{
@@ -180,8 +205,8 @@ button.btn {
   height: 30px;
   cursor: pointer;
   border-radius: 5px;
-  margin-bottom: 10px;
-  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-right: 5px;
   box-sizing: border-box; /* Ensures padding and borders are included in size */
 }
 
@@ -265,6 +290,7 @@ h3 {
   flex-wrap: wrap;
   gap: 8px; /* Reduced gap for better alignment */
   width: 95%;
+  align-items: flex-start;
 }
 
 .tag-sec{
@@ -284,12 +310,18 @@ h3 {
 }
 .tags-container {
   margin-top: 5px;
+  padding-left: 0px;
 }
 
 .tag:hover {
   background-color: #fdfdfd; /* Change color on hover */
   box-shadow: transparent 0 0 0 0, rgb(18 18 18 / 10%) 0 6px 20px;
   transform: scale(1.02); /* Slightly increase size of selected button */
+}
+
+.tag-link {
+  text-decoration: none; /* Remove underline */
+  color: black; /* Blue color for links */
 }
 
 
